k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-catalog
  labels:
    name: product-catalog
