k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-service
  namespace: product-catalog
  labels:
    app: product-catalog-api
spec:
  # Altere para LoadBalancer se estiver em nuvem (AWS, GCP, Azure) para expor externamente
  type: ClusterIP
  selector:
    app: product-catalog-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
